# grif_host

./: manage.py  pyproject.toml  requirements.txt
authentication/: models.py  serializer.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_user_image.py
course/: models.py  serializer.py  urls.py  views.py
course/migrations/: 0001_initial.py
hacaton_api/: asgi.py  settings.py  urls.py  wsgi.py
news/: models.py  serializer.py  urls.py  views.py
news/migrations/: 0001_initial.py
task/: models.py  serializer.py  urls.py  views.py
task/migrations/: 0001_initial.py  0002_alter_result_user.py
